@@ -3066,8 +3066,12 @@ void fm_main_window_update_status_bar( FMMainWindow* main_window,
     if( statvfs( ptk_file_browser_get_cwd(file_browser), &fs_stat ) == 0 )
     {
         char total_size_str[ 64 ];
-        vfs_file_size_to_string_format( size_str, fs_stat.f_bsize * fs_stat.f_bavail, "%.0f %s" );
-        vfs_file_size_to_string_format( total_size_str, fs_stat.f_frsize * fs_stat.f_blocks, "%.0f %s" );
+        // calc free space
+        vfs_file_size_to_string_format( size_str,
+                                    fs_stat.f_bsize * fs_stat.f_bavail, NULL );        
+        // calc total space
+        vfs_file_size_to_string_format( total_size_str,
+                                    fs_stat.f_frsize * fs_stat.f_blocks, NULL );
         g_snprintf( free_space, G_N_ELEMENTS(free_space),
                     _(" %s free / %s   "), size_str, total_size_str );  //MOD
     }
